--- a/public/sklad-express/css/custom.css
+++ b/public/sklad-express/css/custom.css
@@ -1,3 +1,12 @@
+.textarea-desc{
+    font-size: 1rem;
+    min-width: 100%;
+}
+
+.btn-add-products{
+    font-size: 1.5rem;
+}
+
 .liq-pay-button{
     visibility: hidden;
     height: 0px;
