--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -4,6 +4,36 @@
 
 {% block content %}
     <div class="col-xl-12">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-xl-4"></div>
+                <div class="col-xl-4">
+                    <h4>{{ "Отследить отправление"| trans }}</h4>
+                    {% if page_id is defined
+                        and
+                        page_id is not empty
+                        and
+                        page_id in ["post_find"] %}
+                    <div action="{{ path("post_find") }}" method="post">
+                        {% else %}
+                        <form action="{{ path("post_find") }}" method="post" target="_blank">
+                            {% endif %}
+                            <div class="form-group">
+                                <div class="input-group with-focus ">
+                                    <input class="form-control border-right-0" name="tracnum"
+                                           value="{% if trNum is defined %} {{ trNum }}{% endif %}"
+                                           required="required"
+                                    />
+                                    <div class="input-group-append">
+                                        <button type="submit" class="btn btn-success">{{ "Отследить"|trans }}</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
         <!-- START card-->
         <div class="card card-default">
             <div class="card-header">
@@ -16,7 +46,7 @@
                 <!-- START table-responsive-->
                 {% if totalItemCount %}
                 <div class="table-responsive">
-                    <table class="table-sm table-bordered table-striped">
+                    <table class="table table-bordered table-striped w-100">
                         <thead>
                             <tr class="text-center">
                                 <th  scope="col">{{ "Create Date" | trans }}</th>
@@ -31,7 +61,9 @@
                                  <th scope="col">{{ "declareValue" | trans }}</th>
                                  <th scope="col">{{ "Adress" | trans }}</th>
                                  <th scope="col">{{ "Status" | trans }}</th>
-                                 <th colspan="2" scope="col">{{ "Action" | trans }}</th>
+                                {% if page_title != 'Send Parcels List' %}
+                                    <th colspan="2" scope="col">{{ "Action" | trans }}</th>
+                                {% endif %}
                             </tr>
                         </thead>
                         <tbody>
@@ -54,6 +86,7 @@
                                         {% endif %}
                                     </td>
                                     <td>{{ item.orderStatus }}</td>
+                                    {% if page_title != 'Send Parcels List' %}
                                     <td>
                                         {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
                                             <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-success">{{ "Edit Order" | trans }}</a>
@@ -68,10 +101,11 @@
                                                     </div>
                                                     <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
                                             {% endif %}
-                                        {% else %}
+                                        {% elseif page_title != 'Send Parcels List' %}
                                             <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change disabled" value="{{ "Pay" | trans }}" />
                                         {% endif %}
                                     </td>
+                                    {% endif %}
                                 </tr>
                             {% endfor %}
 
@@ -91,6 +125,7 @@
                 {{ knp_pagination_render(items) }}
             </div>
         </div><!-- END card-->
+        </div>
     </div>
 {% endblock %}
  {% block javascripts %}{% endblock %}
