--- a/templates/cabinet/addresses/addresses.html.twig
+++ b/templates/cabinet/addresses/addresses.html.twig
@@ -31,7 +31,7 @@
                                             <tbody>
                                             {% if items is defined and items is iterable  %}
                                                 {% for item in items %}
-                                                 <tr>
+                                                 <tr class="text-center">
                                                      <td>
                                                          {{ item.userFirstName}} {{ item.userLastName }}
                                                          <br>
