--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -46,7 +46,7 @@
                 <!-- START table-responsive-->
                 {% if totalItemCount %}
                 <div class="table-responsive">
-                    <table class="table table-bordered table-striped w-100">
+                    <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr class="text-center">
                                 <th  scope="col">{{ "Create Date" | trans }}</th>
@@ -61,9 +61,7 @@
                                  <th scope="col">{{ "declareValue" | trans }}</th>
                                  <th scope="col">{{ "Adress" | trans }}</th>
                                  <th scope="col">{{ "Status" | trans }}</th>
-                                {% if page_title != 'Send Parcels List' %}
-                                    <th colspan="2" scope="col">{{ "Action" | trans }}</th>
-                                {% endif %}
+                                 <th colspan="2" scope="col">{{ "Action" | trans }}</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -89,17 +87,15 @@
                                     {% if page_title != 'Send Parcels List' %}
                                     <td>
                                         {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
-                                            <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-success">{{ "Edit Order" | trans }}</a>
+                                            <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-success btn-edit-parcel ">{{ "Edit Order" | trans }}</a>
                                         {% endif %}
-                                    </td>
-                                    <td>
                                         {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
                                             {% if item.shippingCosts > 0 %}
                                                 {% set liqPayForm=liqpay.LiqPayForm(item.shippingCosts,'Pay by ExpreaaPochta.com',"EXPRESSORDER_"~item.id) %}
-                                                    <div class="liq-pay-button">
-                                                        {{ liqPayForm | raw }}
-                                                    </div>
-                                                    <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
+                                                <div class="liq-pay-button">
+                                                    {{ liqPayForm | raw }}
+                                                </div>
+                                                <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
                                             {% endif %}
                                         {% elseif page_title != 'Send Parcels List' %}
                                             <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change disabled" value="{{ "Pay" | trans }}" />
@@ -108,7 +104,6 @@
                                     {% endif %}
                                 </tr>
                             {% endfor %}
-
                         {% else %}
                             <tr>
                                 <td colspan="3">{{ "No parcel" | trans}}</td>
