--- a/templates/cabinet/profile/profile.html.twig
+++ b/templates/cabinet/profile/profile.html.twig
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                         <div class="row py-4 justify-content-center">
-                            <div class="col-4 col-sm-4">
+                            <div class="col-3 col-sm-3">
                                 <div class="form-group">
                                     {{ form_label(profileForm.city,"City"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -224,7 +224,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4 col-sm-4">
+                            <div class="col-3 col-sm-3">
                                 <div class="form-group">
                                     {{ form_label(profileForm.street,"Street"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -244,7 +244,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4 col-sm-4">
+                            <div class="col-3 col-sm-3">
                                 <div class="form-group">
                                     {{ form_label(profileForm.house,"Number of house"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -261,6 +261,26 @@
                              </span>
                                         </div>
                                         <div class="invalid-feedback">{{ form_errors(profileForm.house) }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3 col-sm-3">
+                                <div class="form-group">
+                                    {{ form_label(profileForm.apartment,"Number of apartment"|trans, {
+                                        "label_attr": {"class": "text-muted"}
+                                    }) }}
+                                    <div class="input-group with-focus">
+                                        {% if profileForm.apartment.vars.errors|length %}
+                                            {{ form_widget(profileForm.apartment, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
+                                        {% else %}
+                                            {{ form_widget(profileForm.apartment) }}
+                                        {% endif %}
+                                        <div class="input-group-append">
+                             <span class="input-group-text text-muted bg-transparent border-left-0">
+                                 <em class="fa fa-user"></em>
+                             </span>
+                                        </div>
+                                        <div class="invalid-feedback">{{ form_errors(profileForm.apartment) }}</div>
                                     </div>
                                 </div>
                             </div>
