--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -64,7 +64,7 @@
                     <div class="table-responsive">
                         <table class="table table-striped table-bordered table-hover">
                             <thead>
-                            <tr>
+                            <tr class="text-center">
                                 <th>{{ "TN"| trans }}</th>
                                 <th>{{ "shipgCost" | trans }}</th>
                                 <th>{{ "declareValue" | trans }}</th>
@@ -74,7 +74,7 @@
                             <tbody>
                             {% if ordersNew is not empty %}
                                 {% for order in ordersNew %}
-                                    <tr>
+                                    <tr class="text-center">
                                         <td>
                                             {{ order.trackingNumber }}
                                         </td>
@@ -84,7 +84,7 @@
                                     </tr>
                                 {% endfor %}
                             {% else %}
-                                <tr>
+                                <tr class="text-center">
                                     <td>{{ "No order" | trans }}</td>
                                 </tr>
                             {% endif %}
@@ -105,7 +105,7 @@
                     <div class="table-responsive">
                         <table class="table table-striped table-bordered table-hover">
                             <thead>
-                            <tr>
+                            <tr class="text-center">
                                 <th>{{ "TN"| trans }}</th>
                                 <th>{{ "Adress" | trans }}</th>
                                 <th>{{ "Status" | trans }}</th>
@@ -115,14 +115,14 @@
 
                             {% if ordersSend %}
                                 {% for order in ordersSend %}
-                                    <tr>
+                                    <tr class="text-center">
                                         <td>{{ order.trackingNumber }}</td>
                                         <td>{{ order.addresses.fullAddress }}</td>
                                         <td>{{ order.orderStatus.statusName| trans }}</td>
                                     </tr>
                                 {% endfor %}
                             {% else %}
-                                <tr>
+                                <tr class="text-center">
                                     <td>{{ "No order" | trans }}</td>
                                 </tr>
                             {% endif %}
@@ -143,7 +143,7 @@
                     <div class="table-responsive">
                         <table class="table table-striped table-bordered table-hover">
                             <thead>
-                            <tr>
+                            <tr class="text-center">
                                 <th>{{ 'Nomer scheta'| trans }}</th>
                                 <th>{{ 'Sposob oplaty'| trans }}</th>
                                 <th>{{ 'Sum'| trans }}</th>
@@ -153,8 +153,8 @@
                             <tbody>
                             {% if payment %}
                                 {% for item in payment %}
-                                    <tr>
-                                    <tr>
+                                    <tr class="text-center">
+                                    <tr class="text-center">
                                         <td>{{ item.liqpayOrderId }}</td>
                                         <td>{{ "Card"|trans }}</td>
                                         <td>{{ item.sum }}</td>
@@ -163,7 +163,7 @@
                                     </tr>
                                 {% endfor %}
                             {% else %}
-                                <tr>
+                                <tr class="text-center">
                                     <td>{{ "Not pay yet" | trans }}</td>
                                 </tr>
                             {% endif %}
