--- a/templates/cabinet/addresses/addresses.html.twig
+++ b/templates/cabinet/addresses/addresses.html.twig
@@ -18,15 +18,14 @@
                                     <div class="table-responsive">
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead>
-                                            <tr class="text-center">
-                                                <th>{{ "Description" | trans }}</th>
-                                                <th>{{ "Adress" | trans }}</th>
-                                                <th>{{ "Recipient" | trans }}</th>
-                                                <th>{{ "Phone" | trans }}</th>
-                                                <th>{{ "Status" | trans }}</th>
-                                                <th></th>
-                                                <th></th>
-                                            </tr>
+                                                <tr class="text-center">
+                                                    <th>{{ "Description" | trans }}</th>
+                                                    <th>{{ "Adress" | trans }}</th>
+                                                    <th>{{ "Recipient" | trans }}</th>
+                                                    <th>{{ "Phone" | trans }}</th>
+                                                    <th>{{ "Status" | trans }}</th>
+                                                    <th colspan="2">{{ "Action" | trans }}</th>
+                                                </tr>
                                             </thead>
                                             <tbody>
                                             {% if items is defined and items is iterable  %}
