--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -27,7 +27,7 @@
     </div>
     <div class="col-6">
 
-        <h4>{{ "Отследить отправление"| trans }}</h4>
+        <h4>{{ "Track the departure"| trans }}</h4>
         
         {% if page_id is defined
             and
@@ -45,7 +45,7 @@
                                required="required"
                         />
                         <div class="input-group-append">
-                            <button type="submit" class="btn btn-success">{{ "Отследить"|trans }}</button>
+                            <button type="submit" class="btn btn-success">{{ "Track down"|trans }}</button>
                         </div>
                     </div>
                 </div>
