--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
         <div class="col-xl-6"></div>
         <div class="col-xl-6">
-            <h4>{{ "Отследить отправление"| trans }}</h4>
+            <h4>{{ "Track the departure"| trans }}</h4>
             {% if page_id is defined
                 and
                 page_id is not empty
@@ -22,7 +22,7 @@
                                    required="required"
                             />
                             <div class="input-group-append">
-                                <button type="submit" class="btn btn-success">{{ "Отследить"|trans }}</button>
+                                <button type="submit" class="btn btn-success">{{ "Track down"|trans }}</button>
                             </div>
                         </div>
                     </div>
