--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    <meta name="description" content="Bootstrap Admin App">
    <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin">
-   <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <link rel="icon" type="image/x-icon" href="/favicon.ico">
    <title>{% block title %} {{"Sklad Express"|trans }} {% endblock %}</title>
         <link rel="stylesheet" href="{{ asset("sklad-express/vendor/@fortawesome/fontawesome-free/css/brands.css") }}"/>
         <link rel="stylesheet" href="{{ asset("sklad-express/vendor/@fortawesome/fontawesome-free/css/regular.css") }}"/>
