--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ "Dashboard"|trans }}{% endblock %}
 
 {% block content %}
-    <div class="col-6">
+    <div class="col-sm-6">
 
         <h4>{{ user.firstName }} {{ user.lastName }}</h4>
 
@@ -25,7 +25,7 @@
         {% endif %}
 
     </div>
-    <div class="col-6">
+    <div class="col-sm-6">
 
         <h4>{{ "Track the departure"| trans }}</h4>
         
