--- a/templates/cabinet/profile/profile.html.twig
+++ b/templates/cabinet/profile/profile.html.twig
@@ -36,7 +36,7 @@
                 <div class="invalid-feedback">{{ form_errors(profileForm.avatarFile) }}</div>
 
                 <div class="form-group">
-                    <div class="offset-5 col-2">
+                    <div class="save-btn">
                         {{ form_row(profileForm.save_avatar, {"label": "Save"|trans}) }}
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="row py-4 justify-content-center">
-                            <div class="col-4 col-sm-4">
+                            <div class="col-lg-4">
                                 <div class="form-group">
                                     {{ form_label(profileForm.country,"Country"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -162,7 +162,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4 col-sm-4">
+                            <div class="col-lg-4">
                                 <div class="form-group">
                                     {{ form_label(profileForm.regionOblast,"Region"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -182,7 +182,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4 col-sm-4">
+                            <div class="col-lg-4">
                                 <div class="form-group">
                                     {{ form_label(profileForm.regionOblast,"ZIP"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                         <div class="row py-4 justify-content-center">
-                            <div class="col-3 col-sm-3">
+                            <div class="col-lg-3">
                                 <div class="form-group">
                                     {{ form_label(profileForm.city,"City"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -224,7 +224,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3 col-sm-3">
+                            <div class="col-lg-3">
                                 <div class="form-group">
                                     {{ form_label(profileForm.street,"Street"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -244,7 +244,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3 col-sm-3">
+                            <div class="col-lg-3">
                                 <div class="form-group">
                                     {{ form_label(profileForm.house,"Number of house"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -264,7 +264,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3 col-sm-3">
+                            <div class="col-lg-3">
                                 <div class="form-group">
                                     {{ form_label(profileForm.apartment,"Number of apartment"|trans, {
                                         "label_attr": {"class": "text-muted"}
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="offset-5 col-2">
+                            <div class="save-btn">
                                 {{ form_row(profileForm.save, {"label": "Save"|trans}) }}
                             </div>
                         </div>
