--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="{{ asset("sklad-express/css/bootstrap.css") }}" id="bscss" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
         <link rel="stylesheet" href="{{ asset("sklad-express/css/app.css") }}" id="maincss" />
-        <link rel="stylesheet" href="{{ asset("sklad-express/css/custom.css?ver=1.1") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/css/custom.css?ver=1.126712345678912345678") }}"/>
 
         {% block stylesheets %}{% endblock %}
     </head>
