--- a/templates/cabinet/addresses/addresses.html.twig
+++ b/templates/cabinet/addresses/addresses.html.twig
@@ -16,7 +16,7 @@
                                 <div class="card-body">
                                     <!-- START table-responsive-->
                                     <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover">
+                                        <table class="table table-striped table-bordered table-hover addresses-table">
                                             <thead>
                                                 <tr class="text-center">
                                                     <th>{{ "Description" | trans }}</th>
