--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -44,7 +44,7 @@
             <!-- START table-responsive-->
             {% if totalItemCount %}
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-hover">
+                    <table class="table table-striped table-bordered table-hover parcels-table">
                         <thead>
                         <tr class="text-center">
                             <th  scope="col">{{ "Create Date" | trans }}</th>
