--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -1,8 +1,8 @@
 <!-- START Right Navbar-->
 <ul class="navbar-nav flex-row">
     <!-- Search icon-->
-    <li class="nav-item"><a class="nav-link" href="#" data-search-open=""><em class="icon-magnifier"></em></a></li><!-- Fullscreen (only desktops)-->
-    <li class="">
+    <li class="nav-item"><a class="nav-link center-icon" href="#" data-search-open=""><em class="icon-magnifier"></em></a></li><!-- Fullscreen (only desktops)-->
+    <li class="lang-select-wrap">
         <select id="select_language" class="form-control select select_language selectpicker lang-select">
             <option {% if app.request.locale == 'ua' %}selected{% endif %} value="">
                 <i class="flag-icon flag-icon-ua "></i>
@@ -18,9 +18,9 @@
     </li>
 
     <li class="nav-item dropdown dropdown-list">
-        <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" href="#" data-toggle="dropdown" style="max-height: 55px;">
+        <a class="nav-link dropdown-toggle dropdown-toggle-nocaret profile-header" href="#" data-toggle="dropdown" style="max-height: 55px;">
                 <div class="row" style="margin-top: -10px;">
-                    <div class="col-md-3">
+                    <div class="col-3">
                         <img class="rounded-circle" src="
                             {% if user.avatar %}
                               {{ asset(user.avatar) }}
@@ -29,7 +29,7 @@
                             {% endif %}
                            " alt="Avatar" width="33" height="36" style="max-height: 33px;max-width: 36px;">
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-9">
                         <div class="row justify-content-center" >
                             <div class="col-md-12">
                                 {% if user.firstName %}
